--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -55,15 +55,11 @@ position: fixed;
 .Main-body {
   margin-left: 260px;
   padding-top: 50px;
-  /* height: 500px; */
-  /* width: auto; */
-  /* margin-top: 50px; */
-  /* padding-right: 50px; */
-  /* position: relative; */
+  
   background-color: rgb(251, 249, 249);
   padding: 62px;
-  font-family:  sans-serif;
-  /* font-weight: bold; */
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
   width: fit-content;
 }
 
@@ -73,7 +69,7 @@ position: fixed;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  font-size: large;
+  font-size: medium;
   
 }
 
@@ -151,7 +147,7 @@ background-color:  rgb(134, 128, 128);
 }
 
 .logo-image{
-height: 65px;
+height: 61px;
 width: auto;
 }
 
@@ -185,7 +181,7 @@ width: auto;
 } */
 .Mod{
     text-align: left;
-    font-size:large;
+    font-size:medium;
 }
 .mod p{
     text-align: center;
@@ -195,16 +191,16 @@ width: auto;
   border: initial;
 }
 .query{
-  font-size: large;
+  font-size: medium;
   text-align: left;
 }
 .method{
   text-align: left;
-  font-size: large;
+  font-size: medium;
 }
 .title{
   text-align: center;
-  font-size: large;
+  font-size: medium;
   font-weight: bold;
   background-color: #a6a3a0;
   text-transform: uppercase;
