--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -20,6 +20,7 @@ body{
   top: 2px;
   text-underline-position: below;
   overflow: auto;
+  scroll-behavior: auto;
 }
 
 .sb-btn{
@@ -32,8 +33,8 @@ body{
   padding: 5px;
   overflow: auto;
   color: aliceblue;
-  font-size: medium;
-  font-weight: 600;
+  /* font-size: medium;
+  font-weight: 600; */
 }
 
 .sidebar-style{
@@ -55,11 +56,10 @@ position: fixed;
 .Main-body {
   margin-left: 260px;
   padding-top: 50px;
-  
   background-color: rgb(251, 249, 249);
   padding: 62px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 400;
+  /* font-weight: 400; */
   width: fit-content;
 }
 
@@ -75,58 +75,30 @@ position: fixed;
 
 
 .heading{
-color:white;
-background-color:  rgb(134, 128, 128);
-/* text-decoration: underline; */
+  width: 94%;
+  color:white;
+  background-color:  rgb(134, 128, 128);
 }
 
 
 .header{
-  background-color:white;
-
-  
+   background-color:white;
 }
-/* 
-.col-lg-5{
-  flex: 0 0 41.666667%;
-  max-width: 41.666667%;
-  padding: 50px;
-  padding: 30px;
-} */
-/* 
-.col-lg-12{
-  flex: 0 0 100%;
-  max-width: 100%;
-  padding: 50px */
-  /* padding: 50px; */
-  /* background-color: lightgoldenrodyellow; */
-/* } */
-
-/* .col-lg-8 {
-  margin-left: 200px;
-  background:whitesmoke;
-  padding: 100px;
-  font-family:  sans-serif;
-  width: fit-content;
-  text-align: center;
-  padding: 64px;
-} */
-
 
 .intro{
   color:black;
   text-decoration: none;
   text-align:left;
   color: aliceblue;
-  font-size: large;
 }
 
 .int{
   text-align: left;
   text-overflow: clip;
   font-size: inherit;
-  font-weight: 400;
-  width: 226px;
+  /* font-weight: 400; */
+  /* width: 226px; */
+  width: 206px;
 }
 
 .col{
@@ -147,8 +119,8 @@ background-color:  rgb(134, 128, 128);
 }
 
 .logo-image{
-height: 61px;
-width: auto;
+    height: 61px;
+    width: auto;
 }
 
 .link-style{
@@ -159,26 +131,10 @@ width: auto;
 
 .key-style{
   text-align: center;color:white;
-  font-weight:bold;
+  /* font-weight:bold; */
   background-color: rgb(134, 128, 128);
 }
 
-.footer {
-  /* position: fixed; */
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color:#d0d0d0;
-  /* color: white; */
-  text-align: center;
-  padding: 4px;
-  font-size: large;
-  font-weight: bolder;color: black;
-
-}
-/* .a{
-  color: #333333;
-} */
 .Mod{
     text-align: left;
     font-size:medium;
@@ -188,15 +144,15 @@ width: auto;
 }
 
 .parameter{
-  border: initial;
+     border: initial;
 }
 .query{
-  font-size: medium;
-  text-align: left;
+    font-size: medium;
+    text-align: left;
 }
 .method{
-  text-align: left;
-  font-size: medium;
+    text-align: left;
+    font-size: medium;
 }
 .title{
   text-align: center;
@@ -212,13 +168,9 @@ width: auto;
 .nav-link {
   display: block;
   padding: 1.5rem 5rem !important;
-  /* /* padding-left: 20px; */
+
 }
 a.nav-link {
   font-weight: bold;
   color: black;
 }
-/* a.footer-style{
-  color: white;
-  text-align: center;
-} */
