--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,3 +9,33 @@
     color: black;
     height: 55px;
 }
+.fixed-top {
+    /* position: fixed; */
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    padding: 2px;
+}
+.summary{
+    text-align: left;
+    padding: 3px;
+}
+
+
+.string{
+    text-align: left;
+}
+.http{
+    text-align: left;
+}
+.disc{
+    text-align: left;
+}
+.text-center.copyright {
+    /* background-color: rgb(206, 240, 235); */
+    background-color: rgb(241, 245, 239);
+    text-align: center;
+    color: black;
+    padding: 10px;
+}
