--- a/src/components/assets/main.css
+++ b/src/components/assets/main.css
@@ -43,7 +43,7 @@ tbody{
 
 .table, td, th {
     border: 1px white;
-    width: 45%;
+    width: 48%;
     color: black;
     box-sizing: inherit;
     
@@ -53,14 +53,15 @@ tbody{
     border-collapse: collapse;
     width: 50%;
     border-radius: 2px;
-    background-color: darkgray;
+    /* background-color: darkgray; */
+    /* background-color: lightblue; */
   }
   
   td {
     height: 50px;
     vertical-align: bottom;
     border: 1px solid rgb(36, 35, 35);
-    background-color:rgb(236, 231, 231);
+    /* background-color:rgb(236, 231, 231); */
     color: black;
   }
  
