--- a/src/components/assets/main.css
+++ b/src/components/assets/main.css
@@ -1,67 +1,79 @@
 body{
-    font-family: 'Titillium Web', sans-serif
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-tbody{
-    padding: 10px;
-}
-.table{
-    padding: 10px;
-    border: 1px solid black;
-    margin-bottom: 5rem;
-}
-.table-sm td, .table-sm th {
-    padding: 1.3rem;
-    background-color: rgb(214, 210, 210);
-    /* text-align: center; */
-    border-collapse: 10px ;
-    border-radius: 5px;
-    border-color:rgb(68, 67, 67);
-    width:2px;
-}
-
-.table-sm thead{
-    padding: 1.3rem;
-    background-color:rgb(59, 58, 58);
-    /* text-align: center; */
-    box-decoration-break: clone;
-}
-
-.table-sm td, .table-sm th :hover{
-    color:grey;
-}
-
-.copyright{
-    background-color:rgb(44, 44, 44);
-    text-align: center;
-    color: white;
+tbody
+{
     padding: 10px;
 }
 
-.tr{
-    text-align: center;
-}
+    .table
+    {
+            padding: 10px;
+            border: 1px solid black;
+            margin-bottom: 5rem;
+    }
 
-.table, td, th {
-    border: 1px white;
-    width: 48%;
-    color: black;
-    box-sizing: inherit;
-    
-  }
+            .table-sm td, .table-sm th
+            {
+                padding: 1.3rem;
+                background-color: rgb(214, 210, 210);
+                /* text-align: center; */
+                border-collapse: 10px ;
+                border-radius: 5px;
+                border-color:rgb(68, 67, 67);
+                width:2px;
+                color: #4f556b;
+            }
+
+            .table-sm thead 
+            {
+                padding: 1.3rem;
+                background-color:rgb(59, 58, 58);
+                /* text-align: center; */
+                box-decoration-break: clone;
+                color: #4f556b;
+            }
+
+            .table-sm td, .table-sm th :hover{
+                color:grey;
+            }
+
+
+            .copyright{
+                background-color:rgb(44, 44, 44);
+                text-align: center;
+                color: white;
+                padding: 10px;
+            }
+
+            .tr{
+                text-align: center;
+            }
+
+            .table, td, th
+             {
+                    border: 1px white;
+                    width: 40%;
+                    /* color: black; */
+                    box-sizing: inherit;
+                    color: #4f556b;
+            }
+            
+            table
+             {
+                    border-collapse: collapse;
+                    width: 40%;
+                    border-radius: 2px;
+                    
+            }
+            
+            td {
+                    height: 50px;
+                    vertical-align: bottom;
+                    border: 1px solid rgb(36, 35, 35);
+                    /* background-color:rgb(236, 231, 231); */
+                    color: #4f566b;
+                    border-radius: 2px;
+            }
+
   
-  table {
-    border-collapse: collapse;
-    width: 50%;
-    border-radius: 2px;
-    /* background-color: darkgray; */
-    /* background-color: lightblue; */
-  }
-  
-  td {
-    height: 50px;
-    vertical-align: bottom;
-    border: 1px solid rgb(36, 35, 35);
-    /* background-color:rgb(236, 231, 231); */
-    color: black;
-  }
- 
