--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -6,20 +6,35 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
+    .about-header{
+      /* justify-content: right;
+      width: 104%;
+      background-color: #fbfbfb;
+      padding-top: 9px;
+      margin-top: -30px;
+      padding-right: 72px;
+      margin: -25px; */
+      padding: 30px;
+      /* background-color: #F2F6EE; */
+  }
+    
     .Main-body {
     background-color: white;
     margin-left: 260px;
-    padding-top: 50px;
-    padding: 32px;
+    /* margin-top: 7px; */
+    /* padding-top: 50px;
+    padding: 32px; */
     font-family: Arial, Helvetica, sans-serif;
     width: fit-content;
-    line-height: 2.0;
+    line-height: 24px;
+    line-height: var(--font16-lineHeight);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
     .sub-main{
     color: black;
     text-align: right;
     padding: 2px;
+    text-decoration: underline;
     }
 
     a.sub-main{
@@ -27,6 +42,8 @@
     width: 90%;
     font-size: large;
     font-weight: 500;
+    text-decoration: none;
+    /* background-color:whitesmoke; */
     }
 
     .sub-main:hover{
@@ -37,18 +54,18 @@
 
     .Content{
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
+    padding-right: 50px;
+    padding-left: 50px;
+    /* margin-right: auto;
     margin-left: auto;
+    margin-top: 42px; */
+    padding: 30px;
     background-color: white;
     color: #4f566b;
+    line-height: 24px;
+    border-bottom: 1px solid black;
     }
-/* margin: 20px 0px 24px */
-/* background-color: ghostwhite; */
- /* font-size: medium; */
-/* text-align: left; */
-/* margin: 20px 0px 24px */
+
     
 
     .sub-content{
@@ -139,9 +156,10 @@
       color: black;
      }
 
-    p.note{
-    text-align: left;
-    padding: 4px;
+    .note{
+    /* text-align: left; */
+    /* padding: 4px; */
+    text-align: justify;
     }
 
     p.mt-1:active{
@@ -229,6 +247,7 @@
 
     .Mod {
     text-align: left;
+    /* margin-top: -55px; */
     /* font-size:medium; */
     }
 
@@ -280,20 +299,19 @@
     }
 
     .gito {
-    text-align: left;
-    padding: 4px;
-    padding-left: 9px;
+    text-align:justify;
+    /* padding: 4px; */
+    /* padding-left: 9px; */
     }
 
-    p.p-gito
-    {
-    text-align: left;
-    padding: 68px;
-    padding-left: 0px;
-    margin: 9px;
-    margin-top: -68px;
-    /* width: 97.5%; */
-    }
+    .p-gito {
+      text-align: justify;
+      /* padding: 68px; */
+      padding-left: 0px;
+      /* margin: 9px; */
+      /* margin-top: -68px; */
+      width: 95%;
+  }
 
     body {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -338,29 +356,38 @@
     right: 0;
     left: 0;
     z-index: 1030;
-    padding: 2px;
+    /* padding: 2px; */
     }
+
     .sub{
       text-align: left;
     }
+
     .Authentication{
       text-align: left;
+      /* margin-top: -59px; */
     }
+
     .summary{
       text-align: left;
     }
-    .sub-authentication
+
+    
+    .sub-authentication 
     {
-    text-align: left;
-    padding: 0;
+      text-align: justify;
+      padding: 0;
+      width: 99%;
+  }
+
+  .important-note{
+  text-align: left;
     }
-      .important-note{
-        text-align: left;
-      }
 
     .string
     {
     text-align: left;
+    margin-top: -29px;
     }
 
     .http
@@ -371,9 +398,14 @@
     .Response
       {
     text-align: left;
-    /* margin-top: -32px; */
+    margin-top: -30px;
     }
-    
+    .sub-response{
+      text-align: justify;
+    }
+    .p-a{
+      text-align: left;
+    }
 
     .text-center.copyright
     {
@@ -389,5 +421,4 @@
     text-align: left;
     width: 18%;
     }
-
-
+    
