--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -7,9 +7,9 @@
     margin: 0;
     padding: 0;
     color:black;
-    /* background-color: white; */
+    background-color: white;
     /* background-color:#f4f7fa; */
-    background-color: #F2F6EE;
+    /* background-color: #F2F6EE; */
     
      /* background-color: #333333; */
     height: 100%;
@@ -23,7 +23,7 @@
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* width: 256px; */
-    border-right: 3px solid #dee2e6;
+    border-right: 1px solid #dee2e6;
   }
  
 
@@ -32,10 +32,10 @@
         width: 100%;
         height: 40px;
         border: none;
-        /* background-color: white; */
+        background-color: white;
         /* background-color: #fafcfe; */
         /* background-color: #f4f7fa; */
-        background-color: #F2F6EE;
+        /* background-color: #F2F6EE; */
         margin-bottom: 1px;
         padding: 5px;
         overflow: auto;
@@ -80,6 +80,6 @@
 
     /* border: solid 2px #97a1b3; */
     /* width:210px; */
-    border-bottom: 3px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
       }  
    
