--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -82,4 +82,10 @@
     /* width:210px; */
     border-bottom: 1px solid #dee2e6;
       }  
-   
+      @media only screen and (max-width: 415px){
+
+        .sidebar {
+            display:none !important;
+        }
+        
+        }
