--- a/src/components/assets/main.css
+++ b/src/components/assets/main.css
@@ -1,7 +1,7 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-tbody
+/* tbody
 {
     padding: 10px;
 }
@@ -18,23 +18,23 @@ tbody
        padding: 1.3rem;
        background-color: rgb(214, 210, 210);
       /* text-align: center; */
-       border-collapse: 10px ;
+       /* border-collapse: 10px ;
        border-radius: 5px;
        border-color:rgb(68, 67, 67);
        width:2px;
        color: #4f556b;
-            }
+            } */
 
-    .table-sm thead 
+    /* .table-sm thead 
             {
         padding: 1.3rem;
-        background-color:rgb(59, 58, 58);
+        background-color:rgb(59, 58, 58); */
        /* text-align: center; */
-          box-decoration-break: clone;
+          /* box-decoration-break: clone;
           color: #4f556b;
-            }
+            } */
 
-     .table-sm td, .table-sm th :hover{
+     /* .table-sm td, .table-sm th :hover{
       color:grey;
      }
 
@@ -48,32 +48,73 @@ tbody
 
      .tr{
       text-align: center;
-    }
+    } */
 
-     .table, td, th
+     /* .table, td, th
        {
           border: 1px white;
           width: 40%;
          /* color: black; */
-          box-sizing: inherit;
+          /* box-sizing: inherit;
           color: #4f556b;
             }
-            
-    table
+             */
+    /* table
     {
-     border-collapse: collapse;
-     width: 40%;
-     border-radius: 2px;
+     border-collapse: collapse; */
+     /* width: 40%; */
+     /* border-radius: 2px;
                     
-     }
+     } */
             
-  td {
+  /* td {
         height: 50px;
         vertical-align: bottom;
-        border: 1px solid rgb(36, 35, 35);
+        border: 1px solid rgb(36, 35, 35); */
          /* background-color:rgb(236, 231, 231); */
-       color: #4f566b;
+       /* color: #4f566b;
          border-radius: 2px;
-            }
+            } */ 
 
-  
+
+
+            .copyright{
+              background-color:#c7c5c5;
+              text-align: center;
+              color: white;
+              padding: 10px;
+                     }
+                     .text-center.copyright {
+                      /* background-color: rgb(206, 240, 235); */
+                      /* background-color: rgb(241, 245, 239); */
+                      background-color:#c7c5c5;
+                      text-align: center;
+                      color: black;
+                      padding: 10px;
+                  }
+
+  /* <--------------------------------------> */
+  .api-index-title {
+    padding: 0 0 8px 1em;
+    border-bottom: 1px solid #f3f6f8;
+    /* font-weight: 700; */
+    text-align: left;
+}
+.parameter.api-index-item-title {
+  width: 16%;
+  color: #2e4453;
+  border-bottom: 1px solid #f3f6f8;
+  border-right: 1px solid #f3f6f8;
+  border-left: 1px solid #f3f6f8;
+  padding: 17px;
+}
+#apidoc-method{
+  margin: 0.83em ;
+  text-decoration: underline;
+}
+.Query-parameters,.Method-parameters{
+  margin-bottom: 60px;
+}
+.Request-parameters{
+  margin-top: 60px;
+}
