--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -5,6 +5,9 @@
       word-break: break-all;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
+    /* .Head{
+      padding:2px ;
+    } */
 
     .about-header{
       /* justify-content: right;
@@ -15,8 +18,20 @@
       padding-right: 72px;
       margin: -25px; */
       padding: 30px;
+      /* background-color: lightgrey; */
+      background-color: #c7c5c5;
+      height:100px;
+    
       /* background-color: #F2F6EE; */
   }
+
+
+.navbar-expand-lg {
+     flex-flow: row nowrap;
+    justify-content: flex-start; 
+    text-align: right;
+    /* float: right; */
+}
     
     .Main-body {
     background-color: white;
@@ -24,6 +39,7 @@
     /* margin-top: 7px; */
     /* padding-top: 50px;
     padding: 32px; */
+    text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
     width: fit-content;
     line-height: 24px;
@@ -39,11 +55,13 @@
 
     a.sub-main{
     /* justify-content: right; */
-    width: 90%;
+    width: 100%;
     font-size: large;
     font-weight: 500;
     text-decoration: none;
-    /* background-color:whitesmoke; */
+    padding-inline-end: 20px;
+
+    /* background-color: whitesmoke; */
     }
 
     .sub-main:hover{
@@ -53,12 +71,13 @@
     }
 
     .Content{
-    width: 100%;
+    width: 80%;
     padding-right: 50px;
     padding-left: 50px;
     /* margin-right: auto;
     margin-left: auto;
     margin-top: 42px; */
+    text-align: justify;
     padding: 30px;
     background-color: white;
     color: #4f566b;
@@ -73,7 +92,7 @@
     padding-left: 7px;
     }
 
-    h2.sub-content{
+    h1,h2.sub-content{
     display: inline-block;
     position: relative;
     }
@@ -99,16 +118,16 @@
     color:#2a2f45;
     }
 
-    h4:hover{
+    h3:hover{
     color:rgba(5, 4, 4, 0.945);
     }
             
-    h4.line-style {
+    .line-style {
       display: inline-block;
       position: relative;
   }
 
-  h4.line-style:after {
+  .line-style:after {
     content: '';
     display: block;
     margin: auto;
@@ -119,7 +138,7 @@
     background-color: .5s ease;
   }
 
-  h4.line-style:hover:after {
+  .line-style:hover:after {
     width: 100%;
     background:#2a2f45;
   }
@@ -274,6 +293,7 @@
     text-align:left;
     font-weight: bold;
     text-transform: uppercase;
+    margin-bottom: 25px;
     /* text-decoration: underline; */
     }
 
@@ -309,9 +329,18 @@
       padding-left: 0px;
       /* margin: 9px; */
       /* margin-top: -68px; */
-      width: 95%;
+      /* width: 95%; */
   }
-
+.col-sm-6{
+  /* width: 80%; */
+    padding-top: 40px;
+    padding-left: 45px;
+    border-bottom: 1px solid #cdc5c5;
+   
+}
+/* .col-sm-7{
+  padding-left: 45px;
+} */
     body {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -360,15 +389,18 @@
 
     .sub{
       text-align: left;
+      margin-bottom: 25px;
     }
 
     .Authentication{
       text-align: left;
+      margin-bottom: 25px;
       /* margin-top: -59px; */
     }
 
     .summary{
       text-align: left;
+      margin-bottom: 25px;
     }
 
     
@@ -376,11 +408,12 @@
     {
       text-align: justify;
       padding: 0;
-      width: 99%;
+      /* width: 99%; */
   }
 
   .important-note{
   text-align: left;
+  margin-bottom: 25px;
     }
 
     .string
@@ -388,16 +421,26 @@
     text-align: left;
     margin-top: -29px;
     }
+    .sub-string{
+      margin-bottom: 8px;
+    }
 
     .http
     {
     text-align: left;
     }
 
+    .sub-http{
+      margin-bottom: 25px;
+    }
+
     .Response
       {
     text-align: left;
     margin-top: -30px;
+    }
+    .auto-response{
+      margin-bottom: 25px;
     }
     .sub-response{
       text-align: justify;
@@ -413,6 +456,7 @@
     text-align: center;
     color: black;
     padding: 10px;
+    
     }
 
     .method-intro
@@ -421,3 +465,9 @@
     width: 18%;
     }
     
+    @media only screen and (max-width: 768px){
+
+      .Main-body {
+           margin-left: 0px;
+      }
+      }
