--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -18,7 +18,7 @@
     top: 13px;
     border: black;
     text-underline-position: below;
-    overflow: auto;
+    /* overflow: auto; */
     scroll-behavior: auto;
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -89,3 +89,45 @@
         }
         
         }
+
+
+        /* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+.scrollbar::-webkit-scrollbar {
+  background-color:#fff;
+  width:16px
+}
+
+/* background of the scrollbar except button or resizer */
+.scrollbar::-webkit-scrollbar-track {
+  background-color:#fff
+}
+.scrollbar::-webkit-scrollbar-track:hover {
+  background-color:#f4f4f4
+}
+
+/* scrollbar itself */
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color:#babac0;
+  border-radius:16px;
+  border:5px solid #fff
+}
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  /* background-color:#a0a0a5; */
+  border:4px solid #f4f4f4
+}
+
+/* set button(top and bottom of the scrollbar) */
+.scrollbar::-webkit-scrollbar-button {display:none}
+
+/* div box */
+/* body{background-color:#babac0} */
+.scrollbar {
+  height: 100%;
+  /* width: 25vw; */
+  min-width: 150px;
+  background: #fff;
+  overflow-y: scroll}
+.overflow{min-height: 100vh}
