--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -19,7 +19,8 @@
       margin: -25px; */
       padding: 30px;
       /* background-color: lightgrey; */
-      background-color: #c7c5c5;
+      /* background-color: #c7c5c5; */
+      background-color: rgb(235, 232, 232);
       height:100px;
     
       /* background-color: #F2F6EE; */
@@ -80,7 +81,7 @@
     text-align: justify;
     padding: 30px;
     background-color: white;
-    color: #4f566b;
+    color: #697386;
     line-height: 24px;
     border-bottom: 1px solid #cdc5c5;
     }
@@ -179,11 +180,13 @@
     /* text-align: left; */
     /* padding: 4px; */
     text-align: justify;
+    /* width: 103%; */
     }
 
     p.mt-1:active{
-    background-color: #f5fbff;
-                  }
+    background-color: #f5fbff; 
+    }
+    
     p.mt-1:visited{
     background-color: #f5fbff;
     }
@@ -319,40 +322,42 @@
 
     .gito {
     text-align:justify;
+    /* width: 77%; */
     /* padding: 4px; */
     /* padding-left: 9px; */
     }
 
-    .p-gito {
-      text-align: justify;
-      /* padding: 68px; */
-      padding-left: 0px;
-      /* margin: 9px; */
-      /* margin-top: -68px; */
-      /* width: 95%; */
+.p-gito {
+  text-align: justify;
+  /* width: 83%; */
+  padding-left: 0px;
+   width: 94%;
   }
+
 .col-sm-6{
-  width: 75%;
-    padding-top: 40px;
-    padding-left: 45px;
-    border-bottom: 1px solid #cdc5c5;
-    color: #697386;
-    line-height: 24px;
+ width: 75%;
+ padding-top: 40px;
+ padding-left: 45px;
+ /* border-bottom: 1px solid #cdc5c5; */
+ color: #697386;
+ line-height: 24px;
    
 }
-/* .col-sm-7{
-  padding-left: 45px;
-} */
-    body {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+.col-sm-8{
+/* padding-left: 45px; */
+color: #697386;
+line-height: 24px;
+}
 
-    tbody{
-    padding: 10px;
-    }
+body {
+ font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
 
-    .copyright
-    {
+tbody{
+  padding: 10px;
+  }
+  .copyright
+   {
     background-color:rgb(44, 44, 44);
     text-align: center;
     color: white;
@@ -410,6 +415,7 @@
     {
       text-align: justify;
       padding: 0;
+      /* width: 92%; */
       /* width: 99%; */
   }
 
@@ -446,8 +452,12 @@
     .sub-response{
       text-align: justify;
     }
+    .subresponse{
+      text-align: left;
+    }
     .p-a{
       text-align: left;
+      width: 95%;
     }
 
     .text-center.copyright
@@ -470,4 +480,7 @@
       .Main-body {
            margin-left: 0px;
       }
+      }
+      .col-sm-8{
+        color: #697386;
       }
