--- a/src/components/intoduction/style1.css
+++ b/src/components/intoduction/style1.css
@@ -28,16 +28,16 @@
     .Main-body {
     background-color: white;
     margin-left: 260px;
-    /* margin-top: 7px; */
-    /* padding-top: 50px;
-    padding: 32px; */
+
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
     width: fit-content;
     line-height: 24px;
+    width: 83%;
     line-height: var(--font16-lineHeight);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
+    
     .sub-main{
     color: black;
     text-align: right;
@@ -66,9 +66,7 @@
     /* width: 80%; */
     padding-right: 50px;
     padding-left: 50px;
-    /* margin-right: auto;
-    margin-left: auto;
-    margin-top: 42px; */
+   
     text-align: justify;
     padding: 30px;
     background-color: white;
@@ -260,6 +258,7 @@
 
     .Mod {
     text-align: left;
+    
     /* margin-top: -55px; */
     /* font-size:medium; */
     }
@@ -473,7 +472,13 @@ tbody{
     text-align: left;
     width: 18%;
     }
-    
+    .output{
+      /* position: fixed; */
+      
+    }
+    .data{
+      padding: 30px;
+    }
     @media only screen and (max-width: 768px){
 
       .Main-body {
