--- a/src/components/assets/main.css
+++ b/src/components/assets/main.css
@@ -153,4 +153,4 @@ body{
   min-width: 150px;
   background: #fff;
   overflow-y: scroll}
-.overflow{min-height: 100vh}
+/* .overflow{min-height: 100vh} */
