--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -8,21 +8,17 @@
     padding: 0;
     color:black;
     background-color: white;
-    /* background-color:#f4f7fa; */
-    /* background-color: #F2F6EE; */
-    
-     /* background-color: #333333; */
     height: 100%;
     position: fixed;
     margin-top: -13px;
     top: 13px;
     border: black;
     text-underline-position: below;
-    /* overflow: auto; */
+    
     scroll-behavior: auto;
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* width: 256px; */
+  
     border-right: 1px solid #dee2e6;
   }
  
@@ -33,12 +29,9 @@
         /* height: 40px; */
         border: none;
         background-color: white;
-        /* background-color: #fafcfe; */
-        /* background-color: #f4f7fa; */
-        /* background-color: #F2F6EE; */
         margin-bottom: 1px;
         padding: 5px;
-        /* overflow: auto; */
+        
         color: #697386;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -67,10 +60,11 @@
 
     
     .key-style{
-        text-align: left;
-        color: #4d4a4a;
-        text-decoration: none;
-      }
+      text-align: left;
+      color: #4d4a4a;
+      text-decoration: none;
+      padding: 5px;
+  }
       
       .key-style:hover{
         color: black;
@@ -122,8 +116,7 @@ Not supports in Firefox and IE */
 /* set button(top and bottom of the scrollbar) */
 .scrollbar::-webkit-scrollbar-button {display:none}
 
-/* div box */
-/* body{background-color:#babac0} */
+
 .scrollbar {
   height: 100%;
   /* width: 25vw; */
@@ -131,3 +124,5 @@ Not supports in Firefox and IE */
   background: #fff;
   overflow-y: scroll}
 .overflow{min-height: 100vh}
+
+
