--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -31,7 +31,7 @@
         background-color: white;
         margin-bottom: 1px;
         padding: 5px;
-        
+        word-break: keep-all;
         color: #697386;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
@@ -63,7 +63,7 @@
       text-align: left;
       color: #4d4a4a;
       text-decoration: none;
-      padding: 5px;
+      word-break: keep-all;
   }
       
       .key-style:hover{
