--- a/src/components/assets/main.css
+++ b/src/components/assets/main.css
@@ -1,97 +1,21 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
-/* tbody
-{
-    padding: 10px;
-}
 
-    .table
-    {
-       padding: 10px;
-       border: 1px solid black;
-       margin-bottom: 5rem;
+    .copyright{
+    background-color:#c7c5c5;
+    text-align: center;
+    color: white;
+    padding: 10px;
     }
 
-     .table-sm td, .table-sm th
-            {
-       padding: 1.3rem;
-       background-color: rgb(214, 210, 210);
-      /* text-align: center; */
-       /* border-collapse: 10px ;
-       border-radius: 5px;
-       border-color:rgb(68, 67, 67);
-       width:2px;
-       color: #4f556b;
-            } */
-
-    /* .table-sm thead 
-            {
-        padding: 1.3rem;
-        background-color:rgb(59, 58, 58); */
-       /* text-align: center; */
-          /* box-decoration-break: clone;
-          color: #4f556b;
-            } */
-
-     /* .table-sm td, .table-sm th :hover{
-      color:grey;
-     }
-
-
-     .copyright{
-     background-color:rgb(44, 44, 44);
-     text-align: center;
-     color: white;
-     padding: 10px;
-            }
-
-     .tr{
+   .text-center.copyright {
+     
+      background-color:#c7c5c5;
       text-align: center;
-    } */
-
-     /* .table, td, th
-       {
-          border: 1px white;
-          width: 40%;
-         /* color: black; */
-          /* box-sizing: inherit;
-          color: #4f556b;
-            }
-             */
-    /* table
-    {
-     border-collapse: collapse; */
-     /* width: 40%; */
-     /* border-radius: 2px;
-                    
-     } */
-            
-  /* td {
-        height: 50px;
-        vertical-align: bottom;
-        border: 1px solid rgb(36, 35, 35); */
-         /* background-color:rgb(236, 231, 231); */
-       /* color: #4f566b;
-         border-radius: 2px;
-            } */ 
-
-
-
-            .copyright{
-              background-color:#c7c5c5;
-              text-align: center;
-              color: white;
-              padding: 10px;
-                     }
-                     .text-center.copyright {
-                      /* background-color: rgb(206, 240, 235); */
-                      /* background-color: rgb(241, 245, 239); */
-                      background-color:#c7c5c5;
-                      text-align: center;
-                      color: black;
-                      padding: 10px;
-                  }
+      color: black;
+       padding: 10px;
+      }
 
   /* <--------------------------------------> */
   .api-index-title {
@@ -107,8 +31,15 @@ body{
   border-bottom: 1px solid #f3f6f8;
   border-right: 1px solid #f3f6f8;
   border-left: 1px solid #f3f6f8;
-  padding: 17px;
+  padding: 10px 18px 9px;
+  text-align: justify;
+  overflow-wrap: break-word !important;
+    word-break: keep-all;
+
 }
+
+
+
 #apidoc-method{
   margin: 0.83em ;
 
@@ -117,6 +48,7 @@ body{
 .Query-parameters,.Method-parameters,.Request-parameters{
   margin-bottom: 60px;
   width: 50%;
+  display: contents;
 }
 .scrollbar::-webkit-scrollbar {
   background-color:#fff;
